[gd_scene load_steps=2 format=3 uid="uid://ckq48t2ebfu60"]

[ext_resource type="Script" uid="uid://63c5oe72rr5" path="res://scripts/game_over_popup.gd" id="1_m1vb8"]

[node name="GameOverPopup" type="PanelContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -61.5
offset_top = -75.0
offset_right = 61.5
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_m1vb8")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 2
size_flags_vertical = 3
color = Color(0.168627, 0.156863, 0.129412, 1)

[node name="OuterMarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="ColorRect" type="ColorRect" parent="OuterMarginContainer"]
layout_mode = 2
size_flags_vertical = 3
color = Color(0.694118, 0.647059, 0.552941, 1)

[node name="MarginContainer" type="MarginContainer" parent="OuterMarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="OuterMarginContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 5

[node name="GameOverMessage" type="Label" parent="OuterMarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "You won!"
horizontal_alignment = 1

[node name="DifficultyLabel" type="Label" parent="OuterMarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Difficulty: Medium"

[node name="FinalTimeLabel" type="Label" parent="OuterMarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Time: 00:00"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="OuterMarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="PlayAgainButton" type="Button" parent="OuterMarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Play again"

[node name="QuitButton" type="Button" parent="OuterMarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Quit"

[connection signal="pressed" from="OuterMarginContainer/MarginContainer/VBoxContainer/PlayAgainButton" to="." method="_on_play_again_button_pressed"]
[connection signal="pressed" from="OuterMarginContainer/MarginContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
